--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-terser": "^4.0.4"
+    "rollup-plugin-node-resolve": "^4.0.1"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
