--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "author": "Konstantin Kochurov (himamma@gmail.com)",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/register": "^7.0.0",
-    "autoprefixer": "^9.4.10",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "autoprefixer": "^9.5.1",
     "browser-sync": "^2.26.3",
     "cssnano": "^4.1.10",
-    "del": "^4.0.0",
+    "del": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-better-rollup": "^4.0.1",
@@ -40,23 +40,24 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^2.1.0",
+    "gulp-svgmin": "^2.2.0",
     "gulp-uglify": "^3.0.2",
     "gulp-wait": "0.0.2",
-    "rollup": "^1.6.0",
+    "rollup": "^1.10.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1"
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "owl.carousel": "^2.3.4",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.15.0",
     "svg4everybody": "^2.1.9"
   },
   "browserslist": [
-    ">0.25%",
+    "> 0.25% in RU",
+    "not dead",
     "not op_mini all"
   ]
 }
