--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "author": "Konstantin Kochurov (himamma@gmail.com)",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/register": "^7.4.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "autoprefixer": "^9.5.1",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.5",
     "cssnano": "^4.1.10",
-    "del": "^4.1.0",
-    "gulp": "^4.0.0",
+    "del": "^4.1.1",
+    "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-better-rollup": "^4.0.1",
     "gulp-cheerio": "^0.6.3",
@@ -43,7 +43,7 @@
     "gulp-svgmin": "^2.2.0",
     "gulp-uglify": "^3.0.2",
     "gulp-wait": "0.0.2",
-    "rollup": "^1.10.0",
+    "rollup": "^1.10.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3"
@@ -53,10 +53,11 @@
     "jquery": "^3.4.0",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
+    "postcss-import": "^12.0.1",
     "svg4everybody": "^2.1.9"
   },
   "browserslist": [
-    "> 0.25% in RU",
+    "> 0.5%",
     "not dead",
     "not op_mini all"
   ]
