--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "browser-sync": "^2.26.5",
     "cssnano": "^4.1.10",
     "del": "^4.1.1",
-    "gulp": "^4.0.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-better-rollup": "^4.0.1",
     "gulp-cheerio": "^0.6.3",
@@ -41,20 +41,20 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
-    "gulp-uglify": "^3.0.2",
+    "gulp-terser": "^1.1.7",
     "gulp-wait": "0.0.2",
+    "postcss-import": "^12.0.1",
     "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.3"
+    "rollup-plugin-node-resolve": "^4.2.4"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
-    "postcss-import": "^12.0.1",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "swiper": "^4.5.0"
   },
   "browserslist": [
     "> 0.5%",
