--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "Konstantin Kochurov (himamma@gmail.com)",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
     "autoprefixer": "^9.5.1",
     "browser-sync": "^2.26.5",
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^5.0.3",
+    "gulp-modernizr": "^3.2.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
@@ -44,7 +45,7 @@
     "gulp-terser": "^1.2.0",
     "gulp-wait": "0.0.2",
     "postcss-import": "^12.0.1",
-    "rollup": "^1.12.3",
+    "rollup": "^1.12.4",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.0.0"
